# poetry-aws-sam

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  template.yml
.github/workflows/: format_lint_test.yml  master.yml  pr.yml
src/poetry_aws_sam/: aws.py  builder_interface.py  config.py  export.py  main.py  plugin.py  sam.py
tests/: test_1.py  test_activated_groups.py  test_cleo.py  test_click.py
