[tool.poetry]
name = "poetry-aws-sam"
version = "1.0.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@ameritas.com>"]
readme = "README.md"
packages = [{include = "poetry_aws_sam", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry-plugin-export = "1.6.*"
pyyaml = "^6.0.1"
click = "^8.1.7"
poetry = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pdbpp = "^0.10.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-aws-sam-plugin = "poetry_aws_sam.plugin:PoetryAwsSamPlugin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
pythonpath = "src"
