[tool.poetry]
name = "poetry-aws-sam"
version = "1.3.0"
description = "Poetry plugin to work with AWS's SAM serverless tool"
authors = ["Chad Upjohn <chad.upjohn@pinnsg.com>"]
readme = "README.md"
packages = [{include = "poetry_aws_sam", from="src"}]
repository = "https://github.com/upjohnc/poetry-aws-sam"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
poetry-plugin-export = "1.6.*"
pyyaml = "^6.0.1"
click = "^8.1.7"
poetry = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pdbpp = "^0.10.3"
pytest-mock = "^3.12.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-aws-sam-plugin = "poetry_aws_sam.plugin:PoetryAwsSamPlugin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
pythonpath = "src"
